# nickelodeon

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
nix/: flake-shell.nix
src/: lib.rs
