[package]
name = "nickelodeon"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A library to help your CLI be configured with Nickel"
homepage = "https://github.com/marcesquerra/nickelodeon"
repository = "https://github.com/marcesquerra/nickelodeon"
exclude = [
  "nix/*",
  ".envrc",
  "shell.nix"
]

[dependencies]
config-finder = "0.1.2"
nickel-lang = "1.0.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
