[package]
name = "nickelodeon"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A library to help your CLI be configured with Nickel"
homepage = "https://github.com/marcesquerra/nickelodeon"
repository = "https://github.com/marcesquerra/nickelodeon"
exclude = [
  "nix/*",
  ".envrc",
  "shell.nix"
]

[dependencies]
config-finder = "0.1.2"
nickel-lang-core = "0.1.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
